docs: added base swagger docs
